swagger config
